--- a/public/css/zantas.css
+++ b/public/css/zantas.css
@@ -110,7 +110,13 @@
 }
 
 .task-complete {
+    font-size: 12px;
     background: rgba(30, 224, 72, 0.2);
+}
+
+.task-delete {
+    font-size: 12px;
+    background: rgba(220, 90, 90, 0.7);
 }
 
 
