--- a/public/css/zantas.css
+++ b/public/css/zantas.css
@@ -27,6 +27,16 @@
     animation-fill-mode: forwards;
 }
 
+.zentas-left-person {
+    position: absolute;
+    left: 50px;
+    bottom: 0;
+    height: 600px;
+    animation: fade-in 1s;
+    animation-fill-mode: forwards;
+    transform: scaleX(-1);
+}
+
 @keyframes fade-in {
     from {
         opacity: 0;
@@ -247,3 +257,57 @@
     color: #fff;
     font-weight: bold;
 }
+
+/* スタータスオープン */
+.status-open {
+    position: absolute;
+    right: 0px;
+    bottom: 0;
+    height: 300px;
+    animation: fade-in 1s;
+    animation-fill-mode: forwards;
+    z-index: 100;
+}
+
+.status-window {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 400px;
+    height: 500px;
+    padding: 20px;
+    background: rgba(0, 0, 50, 0.3);
+    border: 2px solid #88f;
+    border-radius: 12px;
+    box-shadow: 0 0 20px #88f;
+    color: #fff;
+    font-family: 'serif';
+    backdrop-filter: blur(2px);
+    z-index: 90;
+}
+
+.status-list {
+    font-size: 20px;
+    margin-bottom: 15px;
+    text-align: center;
+    text-shadow: 0 0 5px #88f;
+}
+
+.status-item {
+    margin-bottom: 12px;
+}
+
+.status-item label {
+    display: block;
+    text-align: left;
+    font-weight: bold;
+    font-size: 16px;
+    margin-bottom: 4px;
+}
+
+.status-item p {
+    text-align: center;
+    font-size: 18px;
+}
+
