--- a/public/css/zantas.css
+++ b/public/css/zantas.css
@@ -214,10 +214,70 @@ body {
     margin-left: 10px;
 }
 
-.task-operation-buttons {}
-
 
 /* タスク登録フォーム */
+
+
+/* スタート画面 */
+.start-menu {
+    position: absolute;
+    bottom: 50px;
+    /* 画面の下から50px */
+    left: 50%;
+    transform: translateX(-50%);
+    /* 中央寄せ */
+    display: flex;
+    flex-direction: column;
+    /* 縦に並べる */
+    gap: 15px;
+    /* ボタン間の余白 */
+    align-items: center;
+}
+
+.select-register-type {
+    position: absolute;
+    bottom: 450px;
+    left: 300px;
+    transform: translateX(-50%);
+    display: flex;
+    flex-direction: row;
+    gap: 15px;
+    align-items: center;
+}
+
+.select-register-type-button {
+    display: inline-block;
+    width: 200px;
+    height: 100px;
+    padding: 12px;
+    margin: 10px;
+    background: rgba(0, 0, 0, 0.6);
+    /* 半透明黒 */
+    border: 2px solid #88f;
+    /* 魔法っぽい淡い青 */
+    border-radius: 12px;
+    color: #fff;
+    font-family: "serif", sans-serif;
+    text-align: center;
+    cursor: pointer;
+    transition: all 0.3s;
+    box-shadow: inset 0 0 5px rgba(136, 136, 255, 0.5);
+}
+
+.select-register-type-button:hover {
+    background: rgba(0, 0, 0, 0.8);
+    box-shadow: 0 0 10px #88f, inset 0 0 10px #88f;
+    transform: scale(1.05);
+}
+
+.select-register-type-button:active {
+    transform: scale(0.98);
+    box-shadow: 0 0 5px #88f, inset 0 0 5px #88f;
+}
+
+
+
+
 .scheduled-task-form {
     position: absolute;
     width: 370px;
