--- a/public/css/zantas.css
+++ b/public/css/zantas.css
@@ -12,7 +12,7 @@ body {
     background-size: cover;
 }
 
-.zentas-main {
+.zantas-main {
     position: fixed;
     top: 0;
     left: 0;
@@ -29,14 +29,14 @@ body {
 
 
 
-.zentas-bg {
+.zantas-bg {
     position: absolute;
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
-.zentas-person {
+.zantas-person {
     position: absolute;
     right: 50px;
     bottom: 0;
@@ -45,7 +45,7 @@ body {
     animation-fill-mode: forwards;
 }
 
-.zentas-left-person {
+.zantas-left-person {
     position: absolute;
     left: -100px;
     bottom: 0;
