--- a/public/css/zantas.css
+++ b/public/css/zantas.css
@@ -197,6 +197,7 @@ body {
     color: #fff;
     cursor: pointer;
     transition: background 0.2s;
+
 }
 
 .task-selected {
@@ -209,6 +210,13 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+}
+
+.task-item-title {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 100px;
 }
 
 .task-item:hover {
@@ -811,7 +819,7 @@ body {
 .modal-buttons button:first-child {
     background-color: #aaa;
     color: white;
-    
+
 }
 
 .modal-buttons button:first-child:hover {
@@ -832,6 +840,7 @@ body {
         opacity: 0;
         transform: scale(0.95);
     }
+
     to {
         opacity: 1;
         transform: scale(1);
